Clean up SyllablePattern and related classes